--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,53 @@
-<div>App Module</div>
+<div class="md:container mx-auto my-10">
+  <div [class.dark]="isDarkMode">
+    <div
+      class="bg-white dark:bg-slate-800 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl"
+    >
+      <div>
+        <span
+          class="inline-flex items-center justify-center p-2 bg-indigo-500 rounded-md shadow-lg"
+        >
+          <svg
+            class="h-6 w-6 text-white"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            aria-hidden="true"
+          >
+            <!-- ... -->
+          </svg>
+        </span>
+      </div>
+      <h3
+        class="text-slate-900 dark:text-white mt-5 text-base font-medium tracking-tight"
+      >
+        Writes Upside-Down
+      </h3>
+      <p class="text-slate-500 dark:text-slate-400 mt-2 text-sm">
+        The Zero Gravity Pen can be used to write in any orientation, including
+        upside-down. It even works in outer space.
+      </p>
+    </div>
+    <button
+      (click)="changeTheme()"
+      class="mt-3 bg-white dark:bg-slate-800 px-4 py-3 rounded text-black-100 dark:text-white"
+    >
+      Change Theme
+    </button>
+    <div>
+      <span
+        class="box-decoration-slice bg-gradient-to-r from-indigo-600 to-pink-500 text-white px-2 ..."
+      >
+        Hello<br />
+        World
+      </span>
+      <!-- <span
+        class="box-decoration-clone bg-gradient-to-r from-indigo-600 to-pink-500 text-white px-2 ..."
+      >
+        Hello<br />
+        World
+      </span> -->
+    </div>
+  </div>
+</div>
